--- a/src/styles/sass/pages/_landing-page.scss
+++ b/src/styles/sass/pages/_landing-page.scss
@@ -9,6 +9,7 @@
   }
   &__shops-and-weather-container {
     margin: 0 0 2rem 0;
+    padding: 3rem 0 0 0;
 
     display: grid;
     grid-template-columns: [c-0] 1fr [c-1] 1fr[c-2] 1fr[c-3];
