--- a/src/styles/sass/layout/_footer.scss
+++ b/src/styles/sass/layout/_footer.scss
@@ -13,6 +13,7 @@
     // bottom: 0;
     // position: fixed;
     position: fixed;
+    z-index: 500;
     bottom: 0;
     width: 100%;
     padding: 2rem 3rem 2rem 3rem;
