--- a/src/styles/sass/pages/_landing-page.scss
+++ b/src/styles/sass/pages/_landing-page.scss
@@ -91,6 +91,7 @@
   }
   &__list-of-items-container {
     padding: 0 3.5rem 0 3.5rem;
+    margin: 0 0 11rem 0;
     height: 80dvh;
 
     overflow: hidden;
