--- a/src/styles/sass/components/_item-edit-or-create-view.scss
+++ b/src/styles/sass/components/_item-edit-or-create-view.scss
@@ -66,15 +66,18 @@
     display: grid;
     grid-auto-flow: column;
 
-    @mixin unset-amounts-input {
+    @mixin amounts-input {
       all: unset; //hook2 - useful prop to know
-      width: 2rem;
+      width: 8vw;
     }
     &__current {
-      @include unset-amounts-input;
+      @include amounts-input;
+      text-align: end;
+      padding: 0 0.25rem 0 0;
     }
     &__expected {
-      @include unset-amounts-input;
+      @include amounts-input;
+      padding: 0 0 0 0.25rem;
     }
   }
 
