feature: add loader before item list is fetched

--- a/src/styles/sass/styles-all.module.scss
+++ b/src/styles/sass/styles-all.module.scss
@@ -9,6 +9,7 @@
 @use "./components/toast";
 @use "./components/backdrop";
 @use "./components/modal";
+@use "./components/loader";
 @use "./components/item-list-view";
 @use "./components/item-edit-or-create-view";
 // @use "./components";
