--- a/src/styles/sass/pages/_landing-page.scss
+++ b/src/styles/sass/pages/_landing-page.scss
@@ -90,7 +90,7 @@
     }
   }
   &__list-of-items-container {
-    padding: 0 3.5rem 0 3.5rem;
+    padding: 0.5rem 3.5rem 0 3.5rem;
     margin: 0 0 11rem 0;
     height: 80dvh;
 
