style: change body size for temporary, raw dekstop styling

--- a/src/styles/sass/globals.scss
+++ b/src/styles/sass/globals.scss
@@ -44,6 +44,10 @@ li {
 
 body {
   background-color: colors.$primary-light;
+  width: min(
+    100%,
+    50rem
+  ); //hook2 - change before adding media queries - temporary, placeholder styling solution for cleaner styling on desktop screen sizes.
 }
 
 body,
